--- a/app/static/index.html
+++ b/app/static/index.html
@@ -22,6 +22,10 @@
       <button id="btn-layout">自动布局</button>
   <button id="btn-duplicate" title="复制选中节点 (Ctrl+Shift+K)">复制节点</button>
   <label class="toggle"><input type="checkbox" id="toggle-edge-labels"> 显示连线文本</label>
+      <label class="toggle" title="双击节点进入聚焦，空白处退出">
+        聚焦层数
+        <input id="focus-depth" type="number" min="1" value="1" style="width:64px;" />
+      </label>
       <select id="rel-filter">
         <option value="">自动关联：全部字段</option>
         <option value="地点">只看地点</option>
